--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
                             <i class="fab fa-instagram"></i>
                             <i class="fab fa-twitter"></i>
                             <i class="fab fa-youtube"></i>
+                             <i class="https://github.com/"></i>
                        
 
                         </div>
