--- a/index.html
+++ b/index.html
@@ -347,9 +347,9 @@
                             <i class="fab fa-facebook"></i>
                             <i class="fab fa-instagram"></i>
                             <i class="fab fa-twitter"></i>
-                              <a href="https://github.com" target="_blank" class="social-icon github">
+                            <div>  <a href="https://github.com" target="_blank" class="social-icon github">
                                     <i class="fab fa-github"></i> GitHub
-                                </a>
+                                </a> </div>
                          
                        
 
