--- a/index.html
+++ b/index.html
@@ -349,7 +349,8 @@
                             <i class="fab fa-twitter"></i>
                             <div>  <a href="https://github.com" target="_blank" class="social-icon github">
                                     <i class="fab fa-github"></i> GitHub
-                                </a> </div>
+                                </a> 
+                            </div>
                          
                        
 
